# OOGL

./: meson.build
include/GL/: Platform.hpp
include/GL/GL/: Context.hpp  Extensions.hpp
include/GL/Window/: Window.hpp
samples/: meson.build
src/GL/GL/: Context_Win32.cpp  Extensions.cpp
src/GL/Window/: Window_Win32.cpp
